Adjust styling and padding for all elements to try and prevent overflow

--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ body {
     grid-template-rows: 1fr 5fr;
     grid-auto-rows: 1fr;
     place-items: center;
-    width: 100vw;
+    min-width: 100vw;
     height: calc(100vh - env(safe-area-inset-top) - env(safe-area-inset-bottom));
 }
 
@@ -55,7 +55,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 50px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     gap: 15px;
 }
 
@@ -64,7 +65,8 @@ body {
     grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));
     grid-template-rows: repeat(auto-fit, 1fr);
     place-items: center;
-    padding: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     gap: 30px;
 }
 
@@ -101,6 +103,7 @@ body {
 .title-lg,
 .subtitle-lg {
     text-align: center;
+    width: 60%;
 }
 
 
@@ -123,8 +126,25 @@ body {
     align-items: center;
 }
 
-.hero .title-lg {
+#landing .header {
+    background-color: #343A40;
+    color: white;
+}
+
+.main .hero {
+    background-color: #343A40;
+    padding-top: 150px;
+    padding-bottom: 150px;
+    width: 100%;
+}
+
+.main .hero .title-lg {
     margin-bottom: 10px;
+    color: #f7f7f7;
+}
+
+.main .hero .subtitle-lg {
+    color: #F8F9FA;
 }
 
 .link-item {
@@ -140,7 +160,6 @@ body {
 
 .main {
     background-color: white;
-    margin-top: 5rem;
 }
 
 .main .container {
@@ -148,13 +167,11 @@ body {
 }
 
 #titleProjects {
-    padding: 0px 50px;
     align-items: center;
     margin-top: 5rem;
 }
 
 #projectGrid .flex-item {
-    padding: 20px;
     align-items: center;
     text-align: center;
     cursor: pointer;
